--- a/README
+++ b/README
@@ -7,8 +7,10 @@ euler
     Library containing a number of classes and functions related to number
     theory and project Euler. It includes functionality for things like 
     partitioning numbers, prime checking, generation of combinations and
-    permutations of sets, generation of Pythagorean triples, etc.
+    permutations of sets, generation of Pythagorean triples, etc. It also
+    contains a math sub-library that is used by a number of functions and
+    classes.
 
 stopwatch    
-    A class that can be used for timing and profile C++ code. This class is
+    A class that can be used to time and profile C++ code. This class is
     more or less a wrapper for some functionality of the std::chrono library.
